--- a/midicompiler.cabal
+++ b/midicompiler.cabal
@@ -27,24 +27,19 @@ executable midicompiler-exe
 		    , Calc.Lexer
  
 
----executable lexer-exe
----  hs-source-dirs:      Tokens
----  main-is:             TokensMain.hs
----  default-language:    Haskell2010
----  build-depends:       base >= 4.7 && < 5
----		     , array
-
-
-
---test-suite lib-test
---  type:                exitcode-stdio-1.0
---  hs-source-dirs:      tests,
---		       src
---  main-is:             Tests.hs
---  other-modules:       Tokens
---  build-depends:       base
---                     , tasty
---                     , tasty-hunit
---		     , array
---  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
---  default-language:    Haskell2010
+test-suite lib-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      tests,
+		       src
+  main-is:             Tests.hs
+  other-modules:       Calc
+		     , Calc.Lexer
+  build-depends:       base
+                     , tasty
+                     , tasty-hunit
+		     , array
+  build-tool-depends:
+		      alex:alex
+		     , happy:happy
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
