--- a/midicompiler.cabal
+++ b/midicompiler.cabal
@@ -25,6 +25,8 @@ executable midicompiler-exe
 
   other-modules:      Calc
 		    , Calc.Lexer
+		    , Calc.Parser
+
  
 
 test-suite lib-test
@@ -34,6 +36,9 @@ test-suite lib-test
   main-is:             Tests.hs
   other-modules:       Calc
 		     , Calc.Lexer
+		    , Calc.Parser
+		     , LexerTests
+		     , Definitions
   build-depends:       base
                      , tasty
                      , tasty-hunit
@@ -43,3 +48,4 @@ test-suite lib-test
 		     , happy:happy
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
+
