--- a/midicompiler.cabal
+++ b/midicompiler.cabal
@@ -19,6 +19,7 @@ executable midicompiler-exe
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , array
+		     , Euterpea
   build-tool-depends:
                        alex:alex
                      , happy:happy
@@ -37,7 +38,7 @@ test-suite lib-test
   other-modules:       Calc
 		     , Calc.Lexer
 		    , Calc.Parser
-		     , LexerTests
+--		     , LexerTests
 		     , Definitions
   build-depends:       base
                      , tasty
