--- a/midicompiler.cabal
+++ b/midicompiler.cabal
@@ -20,6 +20,8 @@ executable midicompiler-exe
   build-depends:       base >= 4.7 && < 5
                      , array
 		     , Euterpea
+                     , containers
+                     , ghc
   build-tool-depends:
                        alex:alex
                      , happy:happy
@@ -27,6 +29,8 @@ executable midicompiler-exe
   other-modules:      Calc
 		    , Calc.Lexer
 		    , Calc.Parser
+                    , TypeChecker
+                    , Evaluator
 
  
 
