--- a/noted.cabal
+++ b/noted.cabal
@@ -22,6 +22,7 @@ executable noted-exe
 		     , Euterpea
                      , containers
                      , ghc
+                     , mtl
   build-tool-depends:
                        alex:alex
                      , happy:happy
