--- a/noted.cabal
+++ b/noted.cabal
@@ -30,32 +30,35 @@ executable noted-exe
   other-modules:      Calc
 		    , Calc.Lexer
 		    , Calc.Parser
-                    , TypeChecker
---                    , Evaluator
+                    , ConstraintGenerator
+                    , Solver
+                    , TermReducer
+                    , Translator
+
 
  
 
-test-suite lib-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      tests,
-		       src
-  main-is:             Tests.hs
-  other-modules:      Calc
-		    , Calc.Lexer
-		    , Calc.Parser
-                    , TypeChecker
---                    , Evaluator
---                    , ParserTests
-  build-depends:       base
-                     , tasty
-                     , tasty-hunit
-		     , array
-                     , containers
-                     , mtl
-                     , Euterpea
-  build-tool-depends:
-		      alex:alex
-		     , happy:happy
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
-
+--test-suite lib-test
+--  type:                exitcode-stdio-1.0
+--  hs-source-dirs:      tests,
+--		       src
+--  main-is:             Tests.hs
+--  other-modules:      Calc
+--		    , Calc.Lexer
+--		    , Calc.Parser
+--                    , TypeChecker
+----                    , Evaluator
+----                    , ParserTests
+--  build-depends:       base
+--                     , tasty
+--                     , tasty-hunit
+--		     , array
+--                     , containers
+--                     , mtl
+--                     , Euterpea
+--  build-tool-depends:
+--		      alex:alex
+--		     , happy:happy
+--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+--  default-language:    Haskell2010
+--
