--- a/noted.cabal
+++ b/noted.cabal
@@ -30,10 +30,13 @@ executable noted-exe
   other-modules:      Calc
 		    , Calc.Lexer
 		    , Calc.Parser
-                    , ConstraintGenerator
-                    , Solver
-                    , TermReducer
+                    , Evaluator
                     , Translator
+
+--                    , ConstraintGenerator
+--                    , Solver
+--                    , TermReducer
+--                    , Translator
 
 
  
